--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
-<html style="width: 100%;height: 100%;">
+<html>
   <head>
     <meta charset=UTF-8>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Angular2 Seed</title>
-    <base href="/">
-    <script src="https://use.fontawesome.com/3173361d6e.js"></script>
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-bootstrap/0.5pre/assets/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron|Titillium+Web" rel="stylesheet">
+    <base href="/">
+    <style>
+      .progress-bar{
+        background-color: #2B7FFF!important;
+        background-image: none;
+      }
+      .progress{
+        background-color: #C9C9C9;
+        background-image: none;
+        margin-top: 20px;
+      }
+      .ui-datepicker{
+        width: 75%;
+      }
+    </style>
   </head>
-  <body style="width: 100%;height: 100%;">
+  <body>
 
     <app>
       Loading...
     </app>
 
-    <script src="/polyfills.bundle.js"></script>
-    <script src="/vendor.bundle.js"></script>
-    <script src="/main.bundle.js"></script>
+
+    <script async src="/main.bundle.js"></script>
+    <script src="https://use.fontawesome.com/b93998de12.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   </body>
 </html>
