--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,182 @@
-<!doctype html>
-<html lang="en">
+
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Dashboard</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bootstrap сайт</title>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <app-root></app-root>
+    <div class="navbar navbar-fixed-top">
+         <a class="navbar-brand" href="#"><img class="logo-img" src="img/logo.jpg" alt="logo"></a>
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+           
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="navbar-nav navbar-right">
+              <li class="active"><a href="#">Dashboard</a></li>
+              <li><a href="#">Eligibility</a></li>
+              <li><a href="#">Authorization</a></li>
+              <li><a href="#">Appeals</a></li>
+              <li><a href="#">Claims</a></li>
+              <li>
+                <select>
+                  <option>Other</option>
+                  <option>The second option</option>
+                  <option>The third option</option>
+                </select>
+            </li>
+            </ul>
+          </div>
+        </div>
+        <span class="email-nav">
+            <span>
+                <a class="envelope" href="">
+                    <i class="material-icons">mail_outline</i>
+                    <span class="circle-envelope">
+                            1
+                    </span>
+                </a>
+            </span>
+            <span>
+                <a class="email" href="">
+                    max.geller@hhstechgroup.com 
+                    <i class="material-icons">arrow_drop_down</i>
+                </a>
+            </span>
+        </span>
+        
+      </div>
+  <div class="container main-wrap">
+    <h3 class="Claims-search">
+            Claims search
+    </h3>
+    <div class="Rectangle-3">
+        <div class="input-wrap">
+            <div class="input">
+                <input type="text" placeholder="Member ID">
+            </div>
+            <div class="input">
+                <input type="text" placeholder="Last name">
+            </div>
+            <div class="input" style="position: relative;">
+                    <input type="text" placeholder="Date of birth">
+                    <i class="material-icons icon-date">event_note</i>
+            </div>
+            <!-- <div class="input">
+                <input class="date-input" type="date" placeholder="Date of birth">
+            </div> -->
+        </div>
+        <div class="button-wrap-top">
+            <div class="dropdown">
+                <button class="Advanced-search dropdown-toggle" type="button" data-toggle="dropdown">Advanced search
+                <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                  <li><a href="#">HTML</a></li>
+                  <li><a href="#">CSS</a></li>
+                  <li><a href="#">JavaScript</a></li>
+                </ul>
+              </div>
+              <div>
+                  <button class="clip">Search</button>
+              </div>
+        </div>
+    </div>
+    <hr>
+    <div class="">
+        <h3 class="Recent-search-result">
+            Recent search results
+        </h3>
+        <div class="bot-content-header">
+            <span class="tcn">
+                TCN
+            </span>
+            <span class="service-period">
+                Service period
+            </span>
+            <span class="claim-status">
+                Claim status
+            </span>
+            <span class="total-charged-amount">
+                Total charged amount
+            </span>
+            <span class="member-name">
+                Member name
+            </span>
+            <span class="member-id">
+                Member ID
+            </span>
+        </div>
+        <div class="bot-content">
+           <div class="bot-content-item">
+               <span class="number">9957566138853894</span>
+               <span class="date-period">11/11/2016-06/24/2017</span>
+               <span class="p-paid">P-Paid</span>
+               <span class="cost">$150.00</span>
+               <span class="stan-stone">Stan Stone</span>
+               <span class="member-name-item">88474662</span>
+               <span class="icon-print"><i class="material-icons">print</i></span>
+           </div>
+           <div class="bot-content-item">
+               <span class="number">2387423876578235</span>
+               <span class="date-period">08/04/2016 - 04/09/2017</span>
+               <span class="p-paid">P-Paid</span>
+               <span class="cost">$230.00</span>
+               <span class="stan-stone">Monica Freywille</span>
+               <span class="member-name-item">23987234</span>
+               <span class="icon-print"><i class="material-icons">print</i></span>
+           </div>
+           <div class="bot-content-item">
+               <span class="number">3278623572634983</span>
+               <span class="date-period">07/12/2016 - 04/10/2017</span>
+               <span class="p-paid">P-Paid</span>
+               <span class="cost">$990.99</span>
+               <span class="stan-stone">Jonathan Smith</span>
+               <span class="member-name-item">32523514</span>
+               <span class="icon-print"><i class="material-icons">print</i></span>
+           </div>
+           <div class="bot-content-item">
+               <span class="number">1276842918368755</span>
+               <span class="date-period">06/12/2016 - 03/12/2017</span>
+               <span class="p-paid">P-Paid</span>
+               <span class="cost">$180.40</span>
+               <span class="stan-stone">Alexa Sambosa</span>
+               <span class="member-name-item">23235235</span>
+               <span class="icon-print"><i class="material-icons">print</i></span>
+           </div>
+        </div>
+    </div>
+  </div>
+  <div class="navbar-fixed-bottom row-fluid">
+        <div class="navbar-inner footer-wrap">
+            <div class="container footer-content">
+                <a class="massage-fotter" href="">
+                     Messages and announcements
+                </a>
+                <a class="help-footer" href="">
+                    Help center
+                </a>
+                <span class="group">
+                    ©2017 HHS Technology Group. All rights reserved.
+                </span>
+            </div>
+        </div>
+    </div>
 
-  <script src="https://use.fontawesome.com/a9383b1d9f.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+</body>
 </html>
