--- a/public/02_ss_elig_01.html
+++ b/public/02_ss_elig_01.html
@@ -27,8 +27,7 @@
           <div class="navbar-collapse collapse">
             <ul class="navbar-nav navbar-right">
               <li class="active"><a href="#">Dashboard</a></li>
-              <li><a href="#">Eligibility</a></li>
-              <li><a href="#">Authorization</a></li>
+              <li><a class="active-header-menu" href="#">Eligibility</a></li>
               <li><a href="#">Appeals</a></li>
               <li><a href="#">Claims</a></li>
               <li>
@@ -78,7 +77,7 @@
                 </div>
                 <div class="input" style="position: relative;">
                         <input type="text" placeholder="Date of birth">
-                        <i class="material-icons icon-date">event_note</i>
+                        <i class="material-icons icon-date">today</i>
                 </div>
                 <!-- <div class="input">
                     <input class="date-input" type="date" placeholder="Date of birth">
@@ -88,11 +87,11 @@
                 <div class="input-bottom-wrap">
                 <div class="input from-date-wrap" style="position: relative;">
                     <input type="text" placeholder="From date">
-                    <i class="material-icons icon-date">event_note</i>
+                    <i class="material-icons icon-date">today</i>
                 </div>
                 <div class="input" style="position: relative;">
                     <input type="text" placeholder="To date">
-                    <i class="material-icons icon-date">event_note</i>
+                    <i class="material-icons icon-date">today</i>
                 </div>
                 </div>
                 <div>
@@ -100,7 +99,7 @@
                 </div>
             </div>
         </div>
-        <hr>
+        <hr class="hr">
         <div class="">
             <h3 class="Recent-search-result">
                 Recent search results
