--- a/public/03_ss_auth_01.html
+++ b/public/03_ss_auth_01.html
@@ -28,7 +28,7 @@
             <ul class="navbar-nav navbar-right">
               <li class="active"><a href="#">Dashboard</a></li>
               <li><a href="#">Eligibility</a></li>
-              <li><a href="#">Authorization</a></li>
+              <li><a class="active-header-menu" href="#">Authorization</a></li>
               <li><a href="#">Appeals</a></li>
               <li><a href="#">Claims</a></li>
               <li>
@@ -99,11 +99,11 @@
         <div class="input-right-bot">
             <div class="input begin-date" style="position: relative;">
                 <input type="text" placeholder="Begin date">
-                <i class="material-icons icon-date">event_note</i>
+                <i class="material-icons  icon-date">today</i>
             </div>
             <div class="input end-date" style="position: relative;">
                 <input type="text" placeholder="End date">
-                <i class="material-icons icon-date">event_note</i>
+                <i class="material-icons   icon-date">insert_invitation</i>
             </div>
             <div>
                 <button class="clip">Search</button>
@@ -111,7 +111,7 @@
         </div>
       </div>
     </div>
-    <hr>
+    <hr class="hr">
     <div class="">
             <h3 class="Recent-search-result">
                 Recent search results
