--- a/public/05_ss_claim_search_01.html
+++ b/public/05_ss_claim_search_01.html
@@ -29,7 +29,7 @@
               <li><a href="#">Eligibility</a></li>
               <li><a href="#">Authorization</a></li>
               <li><a href="#">Appeals</a></li>
-              <li><a href="#">Claims</a></li>
+              <li><a class="active-header-menu" href="#">Claims</a></li>
               <li>
                 <select>
                   <option>Other</option>
@@ -72,7 +72,7 @@
             </div>
             <div class="input" style="position: relative;">
                     <input type="text" placeholder="Date of birth">
-                    <i class="material-icons icon-date">event_note</i>
+                    <i class="material-icons icon-date">today</i>
             </div>
             <!-- <div class="input">
                 <input class="date-input" type="date" placeholder="Date of birth">
@@ -80,20 +80,17 @@
         </div>
         <div class="button-wrap-top">
             <div class="dropdown">
-                <button class="Advanced-search dropdown-toggle" type="button" data-toggle="dropdown">Advanced search
-                <span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                  <li><a href="#">HTML</a></li>
-                  <li><a href="#">CSS</a></li>
-                  <li><a href="#">JavaScript</a></li>
-                </ul>
-              </div>
+                <button class="Advanced-search dropdown-toggle" type="button">
+                    Advanced search
+                    <i class="material-icons arrow-advanced-search">keyboard_arrow_down</i>
+                </button>
+            </div>
               <div>
                   <button class="clip">Search</button>
               </div>
         </div>
     </div>
-    <hr>
+    <hr class="hr">
     <div class="">
         <h3 class="Recent-search-result">
             Recent search results
