--- a/public/02_ss_elig_confirm_03.html
+++ b/public/02_ss_elig_confirm_03.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
-         <a class="navbar-brand" href="#"><img class="logo-img" src="img/logo-h.png" alt="logo"></a>
+         <a class="navbar-brand" href="#"><img class="logo-img" src="img/logo.jpg" alt="logo"></a>
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -24,16 +24,20 @@
            
           </div>
           <div class="navbar-collapse collapse">
-            <ul class="navbar-nav navbar-right">
-              <li class="active"><a href="#">Dashboard</a></li>
-              <li><a href="#">Providers</a></li>
-              <li><a href="#">Enrollment</a></li>
-              <li><a href="#">CoC</a></li>
-              <li><a href="#">Appeals</a></li>
-              <li><a href="#">Claims</a></li>
-              <li><a href="#">Payments</a></li>
-            </ul>
-          </div>
+                <ul class="navbar-nav navbar-right">
+                  <li class="active"><a href="#">Dashboard</a></li>
+                  <li><a class="active-header-menu" href="#">Eligibility</a></li>
+                  <li><a href="#">Appeals</a></li>
+                  <li><a href="#">Claims</a></li>
+                  <li>
+                    <select>
+                      <option>Other</option>
+                      <option>The second option</option>
+                      <option>The third option</option>
+                    </select>
+                </li>
+                </ul>
+              </div>
         </div>
         <span class="email-nav">
             <span class="search-button">
@@ -129,7 +133,7 @@
                         TPL spans
                 </span>
             </button>
-            <button>
+            <button class="active-menu-bottom-content">
                 <span>
                         Medicare spans
                 </span>
