--- a/public/02_ss_elig_confirm_03.html
+++ b/public/02_ss_elig_confirm_03.html
@@ -27,6 +27,7 @@
                 <ul class="navbar-nav navbar-right">
                   <li class="active"><a href="#">Dashboard</a></li>
                   <li><a class="active-header-menu" href="#">Eligibility</a></li>
+                  <li><a href="#">Authorization</a></li>
                   <li><a href="#">Appeals</a></li>
                   <li><a href="#">Claims</a></li>
                   <li>
