--- a/public/02_ss_elig_01.html
+++ b/public/02_ss_elig_01.html
@@ -28,6 +28,7 @@
             <ul class="navbar-nav navbar-right">
               <li class="active"><a href="#">Dashboard</a></li>
               <li><a class="active-header-menu" href="#">Eligibility</a></li>
+              <li><a href="#">Authorization</a></li
               <li><a href="#">Appeals</a></li>
               <li><a href="#">Claims</a></li>
               <li>
@@ -159,7 +160,7 @@
 
 
   <!-- footer -->
-    <div class="navbar-fixed-bottom row-fluid">
+    <div class="row-fluid">
         <div class="navbar-inner footer-wrap">
             <div class="container footer-content">
                 <a class="massage-fotter" href="">
