--- a/public/03_ss_auth_01.html
+++ b/public/03_ss_auth_01.html
@@ -176,7 +176,7 @@
         </div>
   </div>
   <!-- footer -->
-  <div class="navbar-fixed-bottom row-fluid">
+  <div class="row-fluid">
         <div class="navbar-inner footer-wrap">
             <div class="container footer-content">
                 <a class="massage-fotter" href="">
