--- a/public/05_iu_claim_info_01.html
+++ b/public/05_iu_claim_info_01.html
@@ -204,7 +204,7 @@
         </div>
    </div>
   </div>
-  <div class="navbar-fixed-bottom row-fluid">
+  <div class="row-fluid">
         <div class="navbar-inner footer-wrap">
             <div class="container footer-content">
                 <a class="massage-fotter" href="">
