--- a/public/ss_1099_01.html
+++ b/public/ss_1099_01.html
@@ -163,7 +163,7 @@
         </div>
     </div>
   <div class="row-fluid">
-        <div class="navbar-inner footer-wrap">
+        <div id="footer" class="navbar-inner footer-wrap footer-main-wrapper">
             <div class="container footer-content">
                 <a class="massage-fotter" href="">
                      Messages and announcements
@@ -186,9 +186,6 @@
 
    
     <script>
-            // $('dropdawn2014').click(function() {
-            // $(this).addClass('abtive-butt');
-            // });
             var acc = document.getElementsByClassName("dropdawn2014");
             var i;
             
@@ -199,6 +196,7 @@
                     document.getElementById("view2014").classList.toggle("hide");
                     document.getElementById("toggle2014").classList.toggle("show");
                     $(this).toggleClass('abtive-butt');
+                    $(footer).toggleClass('footerPosition2014');
                     var toggle2014 = this.nextElementSibling;
                     if (toggle2014.style.display === "block") {
                         toggle2014.style.display = "none";
@@ -217,6 +215,7 @@
                     document.getElementById("view2015").classList.toggle("hide");
                     document.getElementById("toggle2015").classList.toggle("show");
                     $(this).toggleClass('abtive-butt');
+                    $(footer).toggleClass('footerPosition2014');
                     var toggle2015 = this.nextElementSibling;
                     if (toggle2015.style.display === "block") {
                         toggle2015.style.display = "none";
@@ -235,6 +234,7 @@
                     document.getElementById("view2016").classList.toggle("hide");
                     document.getElementById("toggle2016").classList.toggle("show");
                     $(this).toggleClass('abtive-butt');
+                    $(footer).toggleClass('footerPosition2014');
                     var toggle2016 = this.nextElementSibling;
                     if (toggle2016.style.display === "block") {
                         toggle2016.style.display = "none";
