--- a/public/index.html
+++ b/public/index.html
@@ -2,106 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FindWorks</title>
+  <title>APT</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
 </head>
 <body>
-
-
-<!--<table border="0" cellpadding="0" cellspacing="0">-->
-  <!--<tr>-->
-    <!--<td>-->
-      <!--Source Language-->
-    <!--</td>-->
-    <!--<td>-->
-      <!--<select id="ddlSource">-->
-        <!--<option value="ZH">Chinese (Mandarin)</option>-->
-        <!--<option value="CS">Czech</option>-->
-        <!--<option value="DA">Danish</option>-->
-        <!--<option value="NL">Dutch</option>-->
-        <!--<option value="EN" selected = "selected">English</option>-->
-        <!--<option value="ET">Estonian</option>-->
-        <!--<option value="FR">French</option>-->
-        <!--<option value="KA">Georgian</option>-->
-        <!--<option value="DE">German</option>-->
-        <!--<option value="HI">Hindi</option>-->
-        <!--<option value="HU">Hungarian</option>-->
-        <!--<option value="LA">Latin</option>-->
-        <!--<option value="LV">Latvian</option>-->
-        <!--<option value="LT">Lithuanian</option>-->
-        <!--<option value="SR">Serbian</option>-->
-        <!--<option value="CY">Welsh</option>-->
-        <!--<option value="XH">Xhosa</option>-->
-      <!--</select>-->
-    <!--</td>-->
-    <!--<td>-->
-    <!--</td>-->
-    <!--<td>-->
-      <!--Target Language-->
-    <!--</td>-->
-    <!--<td>-->
-      <!--<select id="ddlTarget">-->
-        <!--<option value="ZH">Chinese (Mandarin)</option>-->
-        <!--<option value="CS">Czech</option>-->
-        <!--<option value="DA">Danish</option>-->
-        <!--<option value="NL">Dutch</option>-->
-        <!--<option value="EN">English</option>-->
-        <!--<option value="ET">Estonian</option>-->
-        <!--<option value="FR" selected = "selected">French</option>-->
-        <!--<option value="KA">Georgian</option>-->
-        <!--<option value="DE">German</option>-->
-        <!--<option value="HI">Hindi</option>-->
-        <!--<option value="HU">Hungarian</option>-->
-        <!--<option value="LA">Latin</option>-->
-        <!--<option value="LV">Latvian</option>-->
-        <!--<option value="LT">Lithuanian</option>-->
-        <!--<option value="SR">Serbian</option>-->
-        <!--<option value="CY">Welsh</option>-->
-        <!--<option value="XH">Xhosa</option>-->
-      <!--</select>-->
-    <!--</td>-->
-    <!--<td>-->
-      <!--<input type="button" id="btnTranslate" value="Translate" />-->
-    <!--</td>-->
-  <!--</tr>-->
-  <!--<tr>-->
-    <!--<td colspan="2">-->
-      <!--<textarea id="txtSource" rows="10" cols="30"></textarea>-->
-    <!--</td>-->
-    <!--<td>-->
-    <!--</td>-->
-    <!--<td colspan="2">-->
-      <!--<textarea id="txtTarget" rows="10" cols="30"></textarea>-->
-    <!--</td>-->
-    <!--<td>-->
-    <!--</td>-->
-  <!--</tr>-->
-<!--</table>-->
-<!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
-<!--<script type="text/javascript">-->
-
-  <!--$("#btnTranslate").click(function () {-->
-    <!--var url = "https://translation.googleapis.com/language/translate/v2?key=6963727bfd448643edf497b2cc24ff0adec4e687";-->
-    <!--url += "&source=" + $("#ddlSource").val();-->
-    <!--url += "&target=" + $("#ddlTarget").val();-->
-    <!--url += "&q=" + escape($("#txtSource").val());-->
-    <!--$.get(url, function (data, status) {-->
-      <!--$("#txtTarget").val(data.data.translations[0].translatedText);-->
-    <!--});-->
-  <!--});-->
-<!--</script>-->
   <app-root></app-root>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/web-socket-js/1.0.0/web_socket.js"></script>
-  <script src="https://use.fontawesome.com/e5c0ec888b.js"></script>
-
+  <script src="https://use.fontawesome.com/fc94815bda.js"></script>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
